--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,74 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Inter', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: white;
+  background-color: #282D35;
+}
+.nav--container{
+  display: flex;
+  align-items: center;
+  background-color: #21222A;
+  padding: 0 30px;
+  height: 10vh;
+}
+
+.logo{
+  width: 60px;
+} 
+
+.logo-text{
+  font-size: 25px;
+  font-weight: 700;
+}
+
+.logo--container{
+  display: flex;
+  align-items: center;
+  color: #61DAFB;
+}
+
+.nav-text--container{
+  margin-left: auto;
+}
+
+.nav-text{
+  font-size: 16px;
+  font-weight: 600;
+}
+
+.main--container{
+  margin-left: 30px;
+  height: 80vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+}
+
+.main{
+  font-size: 40px;
+  font-weight: 700;
+  margin: 60px 0;
+}
+
+ul{
+  width: 50vw
+}
+
+ul li{
+  margin: 20px 0;
+  font-size: 16px;
+}
+li::marker{
+  font-size: 1.4rem;
+  color: #61DAFB;
+}
+.main--container--logo{
+  position: absolute;
+  width: 400px;
+  right: -200px;
 }
 
 code {
